<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.vodafone.apix.samples</groupId>
  <artifactId>apix-samples-project</artifactId>
  <packaging>pom</packaging>
  <version>${version.apix.samples}</version>
  <name>API Exposure examples</name>
  <description>API Exposure examples</description>

  <scm>
    <connection>https://github.com/rbieniek/SimpleCMS.git</connection>
  </scm>

  <developers>  
    <developer>
      <id>rainer</id>
      <name>Rainer Bieniek</name>
      <email>Rainer.Bieniek@vodafone.com</email>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone/>
    </developer>
  </developers>

  <pluginRepositories>
    <pluginRepository>
      <id>codehaus-repository</id>
      <url>http://repository.codehaus.org/</url>
      <snapshots>
	<enabled>true</enabled>
      </snapshots>
      <releases>
	<enabled>true</enabled>
      </releases>
    </pluginRepository>
  </pluginRepositories>
  
  <build>
    <defaultGoal>install</defaultGoal>
    <pluginManagement>
      <plugins>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-compiler-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_compiler_plugin}</version>
    	</plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-jar-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_jar_plugin}</version>
    	</plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-surefire-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_surefire_plugin}</version>
          <configuration>
            <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
          </configuration>
    	</plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-eclipse-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_eclipse_plugin}</version>
    	</plugin>
      </plugins>
    </pluginManagement>
    <plugins>    
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
    	  <source>1.7</source>
    	  <target>1.7</target>
	  <debug>true</debug>
	  <debuglevel>vars,lines,source</debuglevel>
    	</configuration>
      </plugin>
    </plugins>
  </build>

  <properties>
    <version.apix.samples>0.1-SNAPSHOT</version.apix.samples>
    <version.org.apache.maven.plugins.maven_compiler_plugin>3.1</version.org.apache.maven.plugins.maven_compiler_plugin>
    <version.org.apache.maven.plugins.maven_eclipse_plugin>2.9</version.org.apache.maven.plugins.maven_eclipse_plugin>
    <version.org.apache.maven.plugins.maven_jar_plugin>2.4</version.org.apache.maven.plugins.maven_jar_plugin>
    <version.org.apache.maven.plugins.maven_surefire_plugin>2.16</version.org.apache.maven.plugins.maven_surefire_plugin>

    <version.org.apache.httpcomponents>4.3.1</version.org.apache.httpcomponents>
    <version.commons.lang>3.1</version.commons.lang>
    <version.org.slf4j>1.7.5</version.org.slf4j>
    <version.com.fasterxml.jackson>2.2.0</version.com.fasterxml.jackson>
    <version.com.google.guava>15.0</version.com.google.guava>
    <version.junit.junit>4.11</version.junit.junit>
    <version.org.mockito>1.9.5</version.org.mockito>
  </properties>

  <modules>
    <module>apix-basics</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-api</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-ext</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-simple</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>jcl-over-slf4j</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>log4j-over-slf4j</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.apache.commons</groupId>
	<artifactId>commons-lang3</artifactId>
	<version>${version.commons.lang}</version>
      </dependency>
      <dependency>
	<groupId>org.apache.httpcomponents</groupId>
	<artifactId>httpcore</artifactId>
	<version>${version.org.apache.httpcomponents}</version>
      </dependency>
      <dependency>
	<groupId>org.apache.httpcomponents</groupId>
	<artifactId>httpclient</artifactId>
	<version>${version.org.apache.httpcomponents}</version>
      </dependency>
      <dependency>
	<groupId>org.apache.httpcomponents</groupId>
	<artifactId>httpclient-cache</artifactId>
	<version>${version.org.apache.httpcomponents}</version>
      </dependency>
      <dependency>
	<groupId>org.apache.httpcomponents</groupId>
	<artifactId>httpmime</artifactId>
	<version>${version.org.apache.httpcomponents}</version>
      </dependency>
      <dependency>
	<groupId>com.fasterxml.jackson.core</groupId>
	<artifactId>jackson-core</artifactId>
	<version>${version.com.fasterxml.jackson}</version>
      </dependency>
      <dependency>
	<groupId>com.google.guava</groupId>
	<artifactId>guava</artifactId>
	<version>${version.com.google.guava}</version>
      </dependency>      
      <dependency> 
	<groupId>junit</groupId> 
	<artifactId>junit</artifactId> 
	<version>${version.junit.junit}</version> 
      </dependency> 
      <dependency>
	<groupId>org.mockito</groupId>
	<artifactId>mockito-all</artifactId>
	<version>${version.org.mockito}</version>
	<scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

</project>
